--- a/index.html
+++ b/index.html
@@ -1,10 +1,9 @@
 <html>
 <head>
 <title>My Example</title>
-<link rel="stylesheet" href="styles.css">
+<link rel="stylesheets" href="stylesheets.css">
 </head>
 <body>
-<link rel="stylesheet" href="styles.css">
 <h1>External Styles</h1>
 <p id="intro">Allow you to define styles for the whole website.</p>
 <p class="colorful">This has a style applied via a class.(external style sheets)</p>
