--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <html>
 <head>
-<title>My Example</title>
+<title>My Webpage("External Styles")</title>
 <link rel="stylesheets" href="stylesheets.css">
 </head>
 <body>
 <h1>External Styles</h1>
-<p id="intro">Allow you to define styles for the whole website.</p>
-<p class="colorful">This has a style applied via a class.(external style sheets)</p>
+<p id="def">Style for whole website.</p>
+<p class="colorful">This is style via a class.</p>
 </body>
 </html>
